feat: social media links on footer

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.2.3"
+    "@iconify-json/simple-icons": "^1.1.45",
+    "nuxt": "^3.2.3",
+    "unplugin-icons": "^0.15.3"
   },
   "dependencies": {
     "sass": "^1.58.3"
