--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "devDependencies": {
     "@iconify-json/simple-icons": "^1.1.45",
     "nuxt": "^3.2.3",
+    "postcss-html": "^1.5.0",
+    "stylelint": "^15.4.0",
+    "stylelint-config-recommended-scss": "^9.0.1",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "unplugin-icons": "^0.15.3"
   },
   "dependencies": {
