--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "devDependencies": {
     "@iconify-json/simple-icons": "^1.2.38",
+    "@nuxt/eslint": "1.4.1",
+    "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
     "postcss-html": "^1.8.0",
     "stylelint": "^16.20.0",
     "stylelint-config-recommended-scss": "^15.0.1",
     "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-config-standard-scss": "^15.0.1",
+    "typescript": "^5.8.3",
     "unplugin-icons": "^22.1.0"
   },
   "dependencies": {
