--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@iconify-json/simple-icons": "^1.2.38",
     "@nuxt/eslint": "1.4.1",
+    "@nuxt/fonts": "0.11.4",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
     "postcss-html": "^1.8.0",
